--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,5 +1,5 @@
 :root {
-    --primary:#FFFFFF;
+    --primary:#6F50DC;
 }
 
 .btn {
@@ -8,6 +8,7 @@
     outline:none;
     border:none;
     cursor: pointer;
+    font-family: 'Poppins';
 }
 
 .btn--primary {
@@ -25,8 +26,10 @@
 }
 
 .btn--medium {
-    padding: 8px 10px;
+  color:#fff;
+    padding: 10px 10px;
     font-size: 1rem;
+    width:120px;
   }
   
   .btn--large {
@@ -37,7 +40,7 @@
   .btn--large:hover,
   .btn--medium:hover {
     transition: all 0.3s ease-out;
-    background:#6F50DC;;
-    color: #E3E3E3;
+    background:#E3E3E3;
+    color: #6F50DC;
     transition: 250ms;
   }
