--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -7,17 +7,20 @@
     align-items: center;
     font-size: 1rem;
     position: relative;
-    top: 0;
+    margin:0;
     z-index: 999;
-
+  
   }
   
   .navbar-container {
-    display: flex;
-    justify-content: center;
     align-items: center;
-    height: 80px;
-    max-width: 1500px;
+  display: flex;
+  flex-direction: row;
+  height: 68px;
+  justify-content: center;
+  position: relative;
+  
+  
   }
   
   .navbar-logo {
@@ -38,18 +41,24 @@
   
   .nav-menu {
     display: grid;
-    grid-template-columns: repeat(4, auto);
+    grid-template-columns: repeat(6, auto);
     grid-gap: 10px;
     list-style: none;
     text-align: center;
-    width: 65vw;
-    justify-content: end;
+    width: 80vw;
+    justify-content: center;
     margin-right: 2rem;
+    
     
   }
   
   .nav-item {
-    height: 80px;
+    height: 50px;
+    
+  }
+
+  .is-active {
+    border-bottom: 4px solid #6F50DC;
   }
   
   .nav-links {
@@ -59,6 +68,7 @@
     text-decoration: none;
     padding: 0rem 2rem;
     height: 100%;
+    font-family: 'Poppins';
   }
   
   .nav-links:hover {
@@ -83,13 +93,16 @@
     .NavbarItems {
       position: relative;
     }
+    .nav-item {
+      height: 80px;
+    }
   
     .nav-menu {
       display: flex;
       flex-direction: column;
       width: 100%;
-      height: 90vh;
-      position: absolute;
+      height: 92vh;
+      position: fixed;
       top: 80px;
       left: -100%;
       opacity: 1;
@@ -102,6 +115,7 @@
       opacity: 1;
       transition: all 0.5s ease;
       z-index: 1;
+      
     }
   
     .nav-links {
@@ -122,6 +136,7 @@
       top: 0;
       left: 0;
       transform: translate(25%, 80%);
+      align-self: flex-start;
     }
   
     .menu-icon {
