--- a/src/components/carousel.css
+++ b/src/components/carousel.css
@@ -1,9 +1,9 @@
 .container {
-    
     width:100%;
     position: relative;
     justify-content: space-between;
     left:0;
+    
   
   }
 
@@ -13,23 +13,38 @@
 }
 
 .item {
-    max-height: 21rem;
-    max-width: 16rem;
-    min-height: 21rem;
-    min-width: 16rem;
-    padding-right: 2rem;
-    padding-top:1rem;
-    padding-bottom: 1rem;
-    
+    max-height: 11rem;
+    max-width: 17rem;
+    min-height: 11rem;
+    min-width: 17rem;
+    position: relative;
+    border-radius: 1.05rem; 
+    background-color: #1e2029b9;
+    margin-right: 30px;
 }
 
 .item img {
     object-fit:cover;
     height :100%;
     width:100%;
-    border-radius: 0.5rem;
+    border-radius: 1.05rem;
     pointer-events: none;
+    box-shadow: #1E2029;
+    filter:opacity(0.7);
 }
+
+.title {
+    position: absolute;
+    bottom: 15px;
+    font-size: 1.2rem;
+    font-weight: 550;
+    left:5px;
+    z-index:7;
+    width: 100%;
+    overflow: hidden;
+    color:#E3E3E3;
+    font-family: 'Lato', sans-serif;
+  }
 
 .carousel {
     display: flex;
@@ -41,9 +56,20 @@
     width: 100%;
     cursor:grab;
     overflow:hidden;
-    
-
 }
+
+.title {
+    position: absolute;
+    bottom: 15px;
+    font-size: 1.2rem;
+    font-weight: 550;
+    padding:8px;
+    z-index:7;
+    width: 100%;
+    overflow: hidden;
+    color:#E3E3E3;
+    font-family: 'Lato', sans-serif;
+  }
 
 @media screen and (max-width: 960px) {
 .container  {
@@ -52,14 +78,12 @@
 }
     
 .item {
-    max-height: 14rem;
-    max-width: 10rem;
-    min-height: 14rem;
-    min-width: 10rem;
+    max-height: 8rem;
+    max-width: 12.5rem;
+    min-height: 8rem;
+    min-width: 12.5rem;
 }
     
    
 }
 
-  
-  
