--- a/src/components/css/navbar.css
+++ b/src/components/css/navbar.css
@@ -9,6 +9,7 @@
     position: relative;
     margin:0;
     z-index: 999;
+
   
   }
   
@@ -24,9 +25,9 @@
   }
   
   .navbar-logo {
-    color: rebeccapurple;
-    justify-self: start;
-    margin-left: 20px;
+    color: #E5E5E5;
+    justify-self: center;
+    
     cursor: pointer;
     text-decoration: none;
     font-size: 1.5rem;
@@ -92,6 +93,12 @@
   @media screen and (max-width: 960px) {
     .NavbarItems {
       position: relative;
+      overflow: hidden;
+    }
+    .navbar{
+      position:sticky;
+      background: #1E2029;
+      overflow: hidden;
     }
     .nav-item {
       height: 80px;
@@ -100,29 +107,38 @@
     .nav-menu {
       display: flex;
       flex-direction: column;
-      width: 100%;
-      height: 92vh;
-      position: fixed;
-      top: 80px;
-      left: -100%;
+      height: 100vh;
+      width: 100vw;
+      position:fixed;
+      top: 0;
+      left: 0;
       opacity: 1;
+      transform: translateX(100vw);
       transition: all 0.5s ease;
+      overflow: hidden;
+     
     }
+    .navbar-container {
+      width:100%;
+      flex-direction: row;
+      justify-content: space-between;
+      
+    }
+    
   
     .nav-menu.active {
       background: #1E2029;
-      left: 0;
+      transform: translateX(0vw);
+      overflow: hidden;
       opacity: 1;
-      transition: all 0.5s ease;
-      z-index: 1;
-      
+      z-index: -1;
     }
   
     .nav-links {
       text-align: center;
       padding: 2rem;
       width: 100%;
-      display: table;
+      display: flex;
     }
   
     .nav-links:hover {
@@ -132,10 +148,10 @@
     }
   
     .navbar-logo {
-      position: absolute;
+      position: relative;
       top: 0;
       left: 0;
-      transform: translate(25%, 80%);
+      transform: translate(0%, 80%);
       align-self: flex-start;
     }
   
