--- a/src/components/css/Item_anime_main.css
+++ b/src/components/css/Item_anime_main.css
@@ -72,7 +72,7 @@
     display: block;
   }
 .active_tab p{
-    color:#e3e3e3c0;
+    color:#02b97f;
 }
   
 
@@ -80,7 +80,11 @@
     border: none;
     
 }
-
+.items td > iframe{
+    border-radius: 5px;
+    border-style: unset;
+    border-color: initial;
+}
 
 @media screen and (max-width: 960px){
     .item_page_container {
@@ -93,8 +97,8 @@
       
         align-self: center;
         width: 100%;
-        padding-left:3rem;
-        padding-right:3rem;
+        padding-left:2.5rem;
+        padding-right:2.5rem;
     }
     .item_tabs {
        align-items: baseline;
