--- a/src/components/css/Hero.css
+++ b/src/components/css/Hero.css
@@ -46,7 +46,7 @@
     flex-direction: column;
     width:45%;
     z-index:1;
-    justify-content: center;
+    top:20%;
     height: 100%;
     padding-left:12rem;
   }
@@ -63,10 +63,12 @@
 
   .text_container > h1 {
     color: #E3E3E3;
-    font-size: 43px;
+    font-size: 52px;
     font-family: 'Poppins';
     font-weight: 600;
-    
+    line-height: 50px;
+    max-width: 40%;
+    text-align: left;
   }
 
   .btn {
@@ -75,7 +77,7 @@
 
 
   .text_container > span {
-    margin-top:20px;
+    margin-top:8px;
     color: rgb(197, 197, 197);
     font-size: 17px;
     font-family: 'Poppins';
@@ -92,6 +94,7 @@
     left:0;
     object-fit: cover;
     margin:0;
+ 
 
   }
 
@@ -126,16 +129,21 @@
 
     .text_container {
       padding-left: 3rem;
+      top:10%;
+    }
+    .text_container span {
+      margin-top:8px;
     }
     .container_s{
-    align-self: flex-end;
-  }
+      align-self:flex-end;
+      padding-bottom: 3rem;
+    }
   }
 
   @media only screen and (min-width: 280px) and (max-width: 960px){
     .hero-container  {
       height:auto;
-      margin-bottom:3rem;
+      margin-bottom:2rem;
       }
 
     .Items {
@@ -153,11 +161,21 @@
     .text_container {
       padding-left: 0rem;
       width:70%;
+      top:10%;
 
+    }
+    .text_container span {
+      margin-top:8px;
     }
     .container_s{
       padding-top:3rem;
       width: 100%;
+      padding-bottom: 3rem;
+  }
+   .text_container {
+      padding-bottom: 0;
+      margin-bottom:0;
+      top:10%;
   }
   }
  
