--- a/src/components/css/Item_anime_main.css
+++ b/src/components/css/Item_anime_main.css
@@ -29,7 +29,6 @@
 .item_tab_results {
     display:flex;
     margin-top:2rem;
-
 }
 .items {
     display:none;
@@ -37,7 +36,7 @@
     border-radius: 15px;
     background-color: #1a1a1a31;
     width: 100%;
-    max-height: 60vh;
+    max-height: 70vh;
     overflow: scroll;
     overflow-x: hidden;
 }
@@ -49,19 +48,19 @@
     border-bottom:#e3e3e305 solid 2px;
 }
 .items th {
-    padding-right:20rem;
-    color:rgba(245, 245, 245, 0.733);
+    font-family: 'Poppins';
+    color:rgba(245, 245, 245, 0.733);;
     padding:1rem;
     border-bottom:#e3e3e305 solid 2px;
-    padding-right:20rem;
+    font-size: 15px;
     width: 100%;
 }
 .items td {
-    flex-direction: column;
+    display: flex;
     color:rgba(245, 245, 245, 0.733);
     padding:1rem;
     border-bottom:#e3e3e305 solid 2px;
-    padding-right:20rem;
+   
     width: 100%;
 }
 .items table {
@@ -84,6 +83,9 @@
     border-radius: 5px;
     border-style: unset;
     border-color: initial;
+    width: 440px;
+    height: 180px;
+    display: flex;
 }
 
 @media screen and (max-width: 960px){
@@ -97,8 +99,8 @@
       
         align-self: center;
         width: 100%;
-        padding-left:2.5rem;
-        padding-right:2.5rem;
+        padding-left:1.5rem;
+        padding-right:1.5rem;
     }
     .item_tabs {
        align-items: baseline;
@@ -113,15 +115,20 @@
         margin-top:2rem;
     }
     .items {
-        max-height: 40vh;
+        max-height: 70vh;
     }
-.items th {
-    padding-right:2rem;
-}
 .items td {
-
-    padding-right:2rem;
-
+    flex-direction: column;
 }
+.items td > iframe{
+    border-radius: 10px;
+    border-style: unset;
+    border-color: initial;
+    width: 100%;
+    height: 170px;
+    display: flex;
+}
+
+
 
 }
